--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# Pre-trained models
+trailhead/nlp/data/processed/GoogleNews-vectors-negative300.bin.gz
+
+
+
+
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
